 * Fix: Properly update current layer fill source when switching layers.
 * Fix: Cap the number of threads used for parallel processing, because 128 core CPUs exist.
 * Fix: Move back button in login dialog to the left side. Thanks Blozzom for reporting.
 * Fix: Properly forget password when editing account and unchecking the "remember password" box. Thanks Meru for reporting.

2023-12-08 Version 2.2.0-beta.11
 * Server Fix: No longer show "cannot look up one session and then join another" when joining a session with an ID alias. Thanks Kink and Fabian for finding this.
 * Fix: Actually disable brush taking in 2.1 sessions, last attempt didn't stick. Thanks again Blozzom for reporting.
 * Fix: Also show mute notifications action when right-clicking the chat. Thanks Blozzom for reporting.
 * Fix: Make brush palette less immensely slow. Thanks lowontrash for reporting.
 * Fix: Show kick and ban messages in the correct order, without duplicates. Thanks xxxx for reporting.
 * Fix: Force the canvas to refresh on resize even harder because some systems still get artifacts. Thanks xxxx for reporting.
 * Fix: Default the mouse wheel to pan the canvas on macOS instead of zooming it, since that makes more sense for its two-dimensional scroll wheels. Thanks Charmandrigo for reporting.
 * Fix: Make Apple Magic Trackpad and hopefully other touch pads work. Thanks Charmandrigo for reporting and helping figure this out.
 * Fix: Add a close button to the tablet tester, playback, event log and flipbook dialogs so that it can be closed on Android and other systems without window decorations without having to press some button or key combination.
 * Fix: Enable fingerpainting on Android by default if the device doesn't have a stylus.
 * Fix: Prefer versioned lconvert executable over unversioned one to make things work on Fedora. Thanks lowontrash for reporting.