@@ -1,7 +1,9 @@
 // SPDX-License-Identifier: GPL-3.0-or-later
 extern "C" {
+#include <dpcommon/geom.h>
 #include <dpengine/image.h>
 }
+#include "libclient/drawdance/global.h"
 #include "libclient/drawdance/image.h"
 
 static void cleanupImage(void *user)
@@ -62,6 +64,25 @@ QColor sampleColorAt(
 	return color;
 }
 
-
+QImage transformImage(
+	const QImage &source, const QPolygon &dstQuad, int interpolation,
+	QPoint *outOffset)
+{
+	DrawContext drawContext = DrawContextPool::acquire();
+	DP_Quad quad = DP_quad_make(
+		dstQuad.point(0).x(), dstQuad.point(0).y(), dstQuad.point(1).x(),
+		dstQuad.point(1).y(), dstQuad.point(2).x(), dstQuad.point(2).y(),
+		dstQuad.point(3).x(), dstQuad.point(3).y());
+	int offsetX, offsetY;
+	DP_Image *img = DP_image_transform_pixels(
+		source.width(), source.height(),
+		reinterpret_cast<const DP_Pixel8 *>(source.constBits()),
+		drawContext.get(), &quad, interpolation, &offsetX, &offsetY);
+	if(img && outOffset) {
+		outOffset->setX(offsetX);
+		outOffset->setY(offsetY);
+	}
+	return wrapImage(img);
+}
 
 }
