@@ -16,6 +16,7 @@ Unreleased Version 2.2.0-pre
  * Fix: Cap the number of threads used for parallel processing, because 128 core CPUs exist.
  * Fix: Move back button in login dialog to the left side. Thanks Blozzom for reporting.
  * Fix: Properly forget password when editing account and unchecking the "remember password" box. Thanks Meru for reporting.
+ * Fix: Apply chosen interpolation to pasted images. Thanks Hipofiz for reporting.
 
 2023-12-08 Version 2.2.0-beta.11
  * Server Fix: No longer show "cannot look up one session and then join another" when joining a session with an ID alias. Thanks Kink and Fabian for finding this.
